Mobile adaption. Distance corrected in menu with gap

--- a/css/main.css
+++ b/css/main.css
@@ -1402,14 +1402,12 @@ body {
 }
 @media screen and (max-width: 767px) {
   .menu-list {
+    gap: 15px 8px;
     box-sizing: border-box;
     display: flex;
     flex-wrap: wrap;
     justify-content: left;
     margin-bottom: 40px;
-  }
-  .menu-item:not(:last-child) {
-    margin-right: 8px;
   }
   .menu-btn {
     padding: 6px 22px;
