--- a/sass/loyout/_portfolio-menu.scss
+++ b/sass/loyout/_portfolio-menu.scss
@@ -2,15 +2,12 @@
 
 @media screen and (max-width: 767px) {
   .menu-list {
+    gap: 15px 8px;
     box-sizing: border-box;
     display: flex;
     flex-wrap: wrap;
     justify-content: left;
     margin-bottom: 40px;
-  }
-
-  .menu-item:not(:last-child) {
-    margin-right: 8px;
   }
 
   .menu-btn {
